now works on macos